signature docs improve (#37)
